--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,14 @@
             <div class="box">
                 <img src="https://images.vexels.com/media/users/3/146850/isolated/preview/b314541f49ce483dd4c47d0142a47f77-icono-de-la-pelota-de-f-tbol-cl--sico-by-vexels.png" alt="Box_icono" style="float:center;width:35px;height:35px;">
                 <h3>Soccer </h3>
-                <p>Ve los proximos partido de Fútball</p>
+                <p>Ve los proximos partido de Soccer</p>
                 <a href="#" class="btn">Ver Eventos</a>
 
             </div>
             <div class="box">
                 <img src="https://thumbs.dreamstime.com/b/pelota-de-b%C3%A9isbol-cruzado-peros-y-icono-contorno-grueso-editable-con-dise%C3%B1o-relleno-color-ilustraci%C3%B3n-vectorial-213730064.jpg" alt="beisbal_icono" style="float:center;width:35px;height:35px;">
                 <h3>Baseball </h3>
-                <p>Ve los proximos partido de Beisbal</p>
+                <p>Ve los proximos partido de Baseball</p>
                 <a href="#" class="btn">Ver Eventos</a>
 
             </div>
